# functional_programming

./: .gitignore  Cargo.toml  README.md  directories.txt
arithemtic-evaluator/: Cargo.toml
arithemtic-evaluator/src/: errors.rs  main.rs  restapi.rs
arithemtic-evaluator/src/parsemath/: ast.rs  parser.rs  token.rs  tokenizer.rs
atomics/: Cargo.toml
atomics/src/: ch2.rs  main.rs
concurrency/: Cargo.toml
concurrency/src/: channels.rs  states.rs
fn_prog/src/: main.rs
image-cli/: Cargo.toml
image-cli/src/: image-cli.rs
image-cli/src/imagic/: error.rs  mod.rs  resize.rs  stats.rs
linuxio/: Cargo.toml
linuxio/src/: detectusb.rs  errors.rs  file2.txt  records.txt  tests.rs
network/: Cargo.toml
network/src/: tcp_c.rs  tcp_s.rs  tests.rs  udp_c.rs  udp_s.rs
proxy/: Cargo.toml
proxy/src/: bin.rs
rest_api/: Cargo.toml
rest_api/migrations/2023-04-20-125032_mining_pool_api/: up.sql
rest_api/src/: main.rs  miner.rs  miner_controller.rs  schema.rs  util.rs  wallet.rs  wallet_controller.rs
rstat/: Cargo.toml
rstat/src/: error.rs  main.rs  srcstats.rs
shell/: Cargo.toml
shell/src/: shell.rs  tests.rs
src/: lib.rs  main.rs
template-engine/src/: lib.rs  main.rs
text-viewer/: Cargo.toml
text-viewer/src/: advanced_viewer.rs  viewer.rs
tips/: Cargo.toml
tips/src/: async1.rs  boxes.rs  invariants.rs  methods.rs  refs.rs  reminder.rs
