[package]
name = "arithemtic-evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "restapi"
path = "src/restapi.rs"


[dependencies]
thiserror = "1.0.30"
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }