[package]
name = "text-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"

[[bin]]
name = "viewer"
path = "src/viewer.rs"

[[bin]]
name = "aviewer"
path = "src/advanced_viewer.rs"