[package]
name = "tips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "methods"
path = "src/methods.rs"

[[bin]]
name = "boxes"
path = "src/boxes.rs"

[[bin]]
name = "refs"
path = "src/refs.rs"

[dependencies]
