[package]
name = "tips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "methods"
path = "src/methods.rs"

[[bin]]
name = "boxes"
path = "src/boxes.rs"

[[bin]]
name = "refs"
path = "src/refs.rs"

[[bin]]
name = "reminder"
path = "src/reminder.rs"

[[bin]]
name = "inv"
path = "src/invariants.rs"

[[bin]]
name = "a1"
path = "src/async1.rs"

[dependencies]
futures = "0.3.28"
